--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <title>Jumbotron Template for Bootstrap</title>
 
+    <!-- This is google arvo font -->
+    <link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
